--- a/apollonet/apollonet/apollonet.csproj
+++ b/apollonet/apollonet/apollonet.csproj
@@ -5,9 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Com.Ctrip.Framework.Apollo" Version="2.4.2" />
-    <PackageReference Include="Com.Ctrip.Framework.Apollo.AspNetCoreHosting" Version="2.4.1" />
-    <PackageReference Include="Com.Ctrip.Framework.Apollo.Configuration" Version="2.4.1" />
+    <ProjectReference Include="..\ApolloConfig\ApolloConfig.csproj" />
+    <ProjectReference Include="..\ApolloCore\ApolloCore.csproj" />
   </ItemGroup>
 
 
