--- a/apollonet/apollonet/appsettings.json
+++ b/apollonet/apollonet/appsettings.json
@@ -6,9 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "apollo": {
-    "AppId": "msdemo",
-    "Env": "DEV"
-  }
+  "AllowedHosts": "*"
 }
